--- a/index.html
+++ b/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Day 4</title>
 </head>
 <body>
-    
+    <input type="text" placeholder="street number">
+    <input type="text" placeholder="street name">
+    <input type="text" placeholder="city">
+    <select name="" id="">
+        <option value="ca">CA</option>
+        <option value="nv">NV</option>
+        <option value="az">AZ</option>
+        <option value="or">OR</option>
+    </select>
     <script src="./js/script.js"></script>
 </body>
 </html>
